syntax = "proto3";

package datachain.datastore.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "datachain/datastore/v1/params.proto";
import "datachain/datastore/v1/stored_chunk.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "datachain/x/datastore/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/datachain/datastore/v1/params";
  }

  // ListStoredChunk Queries a list of StoredChunk items.
  rpc GetStoredChunk(QueryGetStoredChunkRequest) returns (QueryGetStoredChunkResponse) {
    option (google.api.http).get = "/datachain/datastore/v1/stored_chunk/{index}";
  }

  // ListStoredChunk defines the ListStoredChunk RPC.
  rpc ListStoredChunk(QueryAllStoredChunkRequest) returns (QueryAllStoredChunkResponse) {
    option (google.api.http).get = "/datachain/datastore/v1/stored_chunk";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetStoredChunkRequest defines the QueryGetStoredChunkRequest message.
message QueryGetStoredChunkRequest {
  string index = 1;
}

// QueryGetStoredChunkResponse defines the QueryGetStoredChunkResponse message.
message QueryGetStoredChunkResponse {
  StoredChunk stored_chunk = 1 [(gogoproto.nullable) = false];
}

// QueryAllStoredChunkRequest defines the QueryAllStoredChunkRequest message.
message QueryAllStoredChunkRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllStoredChunkResponse defines the QueryAllStoredChunkResponse message.
message QueryAllStoredChunkResponse {
  repeated StoredChunk stored_chunk = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
